--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "nodemailer": "^4.3.1",
     "nodemon": "^1.12.1",
     "pg": "^7.4.0",
+    "qrcode-svg": "^1.0.0",
     "sequelize": "^4.22.5"
   }
 }
